--- a/factoids.cabal
+++ b/factoids.cabal
@@ -44,17 +44,13 @@ executable factoids-exe
   default-language:    Haskell2010
 
 
--- test-suite factoids-tests
---   type:                exitcode-stdio-1.0
---   hs-source-dirs:      test
---   main-is:             Spec.hs
---   other-modules:       --ParseSpec
---                        SpecHelper
---   build-depends:       base >= 4.7 && < 5
---                      , factoids
---                      , hspec
---                      , base16-bytestring
---   default-language:    Haskell2010
+test-suite factoids
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Test.hs
+  build-depends:       base >= 4.7 && < 5
+                     , factoids
+  default-language:    Haskell2010
 
 source-repository head
   type:     git
